// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label Label hidden renders 1`] = `
.c0 {
  font-size: 10px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  display: block;
  width: 100%;
  margin: 0;
  font-size: 10px;
  color: #687B8E;
  font-weight: 600;
  position: absolute;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

<label
  className="c0"
  color="gray"
  fontSize="10px"
  fontWeight="bold"
  hidden={true}
/>
`;

exports[`Label Label nowrap renders 1`] = `
.c0 {
  font-size: 10px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  display: block;
  width: 100%;
  margin: 0;
  font-size: 10px;
  color: #687B8E;
  font-weight: 600;
  white-space: nowrap;
}

<label
  className="c0"
  color="gray"
  fontSize="10px"
  fontWeight="bold"
/>
`;

exports[`Label it renders 1`] = `
.c0 {
  font-size: 10px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  display: block;
  width: 100%;
  margin: 0;
  font-size: 10px;
  color: #687B8E;
  font-weight: 600;
}

<label
  className="c0"
  color="gray"
  fontSize="10px"
  fontWeight="bold"
/>
`;
